; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/quartz/extr_referenceclock.c_test_IReferenceClock_query_interface.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/quartz/extr_referenceclock.c_test_IReferenceClock_query_interface.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IID_IUnknown = common dso_local global i32 0, align 4
@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [44 x i8] c"IReferenceClock_QueryInterface returned %x\0A\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"pF is NULL\0A\00", align 1
@IID_IDirectDraw = common dso_local global i32 0, align 4
@E_NOINTERFACE = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [16 x i8] c"pF is not NULL\0A\00", align 1
@IID_IReferenceClock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @test_IReferenceClock_query_interface to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_IReferenceClock_query_interface(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = bitcast i32** %6 to i8**
  %9 = call i64 @IReferenceClock_QueryInterface(i32* %7, i32* @IID_IUnknown, i8** %8)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @S_OK, align 8
  %12 = icmp eq i64 %10, %11
  %13 = zext i1 %12 to i32
  %14 = load i64, i64* %5, align 8
  %15 = call i32 (i32, i8*, ...) @ok(i32 %13, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i64 %14)
  %16 = load i32*, i32** %6, align 8
  %17 = icmp ne i32* %16, null
  %18 = zext i1 %17 to i32
  %19 = call i32 (i32, i8*, ...) @ok(i32 %18, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0))
  %20 = load i64, i64* %5, align 8
  %21 = call i64 @SUCCEEDED(i64 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %2
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @IUnknown_Release(i32* %24)
  br label %26

26:                                               ; preds = %23, %2
  %27 = load i32*, i32** %4, align 8
  %28 = bitcast i32** %6 to i8**
  %29 = call i64 @IReferenceClock_QueryInterface(i32* %27, i32* @IID_IDirectDraw, i8** %28)
  store i64 %29, i64* %5, align 8
  %30 = load i64, i64* %5, align 8
  %31 = load i64, i64* @E_NOINTERFACE, align 8
  %32 = icmp eq i64 %30, %31
  %33 = zext i1 %32 to i32
  %34 = load i64, i64* %5, align 8
  %35 = call i32 (i32, i8*, ...) @ok(i32 %33, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i64 %34)
  %36 = load i32*, i32** %6, align 8
  %37 = icmp eq i32* %36, null
  %38 = zext i1 %37 to i32
  %39 = call i32 (i32, i8*, ...) @ok(i32 %38, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  %40 = load i32*, i32** %4, align 8
  %41 = bitcast i32** %6 to i8**
  %42 = call i64 @IReferenceClock_QueryInterface(i32* %40, i32* @IID_IReferenceClock, i8** %41)
  store i64 %42, i64* %5, align 8
  %43 = load i64, i64* %5, align 8
  %44 = load i64, i64* @S_OK, align 8
  %45 = icmp eq i64 %43, %44
  %46 = zext i1 %45 to i32
  %47 = load i64, i64* %5, align 8
  %48 = call i32 (i32, i8*, ...) @ok(i32 %46, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i64 %47)
  %49 = load i32*, i32** %6, align 8
  %50 = icmp ne i32* %49, null
  %51 = zext i1 %50 to i32
  %52 = call i32 (i32, i8*, ...) @ok(i32 %51, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0))
  %53 = load i64, i64* %5, align 8
  %54 = call i64 @SUCCEEDED(i64 %53)
  %55 = icmp ne i64 %54, 0
  br i1 %55, label %56, label %59

56:                                               ; preds = %26
  %57 = load i32*, i32** %6, align 8
  %58 = call i32 @IUnknown_Release(i32* %57)
  br label %59

59:                                               ; preds = %56, %26
  ret void
}

declare dso_local i64 @IReferenceClock_QueryInterface(i32*, i32*, i8**) #1

declare dso_local i32 @ok(i32, i8*, ...) #1

declare dso_local i64 @SUCCEEDED(i64) #1

declare dso_local i32 @IUnknown_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
